day-15/disallow-root-user.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-root-user
spec:
  validationFailureAction: Enforce
  rules:
  - name: check-runAsNonRoot
    match:
      resources:
        kinds:
        - Pod
    exclude:
      resources:
        namespaces: # não irá aplicar a policy para este namespace
        - giropops
    validate:
        message: "Root? isso não pode amigão!!!"
        pattern:
          spec:
            containers:
            - securityContext:
                runAsNonRoot: true
